# sysroots

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  bookworm.lock.json  bookworm.yaml  plucky.lock.json  plucky.yaml
example/: .bazelrc  MODULE.bazel
example/src/cc/: main.cc
sysroots/private/: deb.bzl  distros.bzl  ecosystems.bzl
