module(
    name = "sysroots",
)

bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_distroless", version = "0.5.1")
git_override(
    module_name = "rules_distroless",
    commit = "a69bc1949d5daf2d1b0906890667d69b0897688b",
    remote = "https://github.com/GoogleContainerTools/rules_distroless.git",
)

apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
apt.install(
    name = "bookworm",
    lock = "@sysroots//:bookworm.lock.json",
    manifest = "//:bookworm.yaml",
)
apt.install(
    name = "plucky",
    lock = "@sysroots//:plucky.lock.json",
    manifest = "//:plucky.yaml",
)
use_repo(apt, "bookworm", "plucky")
