bazel_dep(name = "sysroots")
local_path_override(
    module_name = "sysroots",
    path = "../",
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "tweag-credential-helper", version = "0.0.5")

bazel_dep(name = "rules_cc", version = "0.1.1", dev_dependency = True)
bazel_dep(name = "toolchains_llvm", version = "1.2.0", dev_dependency = True)
single_version_override(
    module_name = "toolchains_llvm",
    patch_strip = 1,
    patches = [
        "//patches:toolchains_llvm_01_backport_libclang_rt_setting.patch",
        "//patches:toolchains_llvm_02_libc++.patch",
    ],
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_base",
    llvm_versions = {
        "linux-x86_64": "20.1.1",
        "linux-aarch64": "20.1.1",
    },
    sha256 = {
        "linux-x86_64": "58d7a1a8fa22a001794e82a8e9ca441e12fb6d62fd8b7d47040df58a459dec8e",
        "linux-aarch64": "86314680f7abea8e054d635c0e54b3f3f6993f8e826df0da8cfd02e456976625",
    },
    urls = {
        "linux-x86_64": ["https://github.com/dzbarsky/static-clang/releases/download/v20.1.1/linux_amd64.tar.xz"],
        "linux-aarch64": ["https://github.com/dzbarsky/static-clang/releases/download/v20.1.1/linux_arm64.tar.xz"],
    },
)
llvm.toolchain(
    name = "llvm_libcxx",
    libclang_rt = {
        "@llvm_sysroot_linux_amd64_libcxx//:usr/lib/llvm-20/lib/clang/20/lib/linux/libclang_rt.builtins-x86_64.a": "x86_64-unknown-linux-gnu/libclang_rt.builtins.a",
        "@llvm_sysroot_linux_arm64_libcxx//:usr/lib/llvm-20/lib/clang/20/lib/linux/libclang_rt.builtins-aarch64.a": "aarch64-unknown-linux-gnu/libclang_rt.builtins.a",
    },
    llvm_versions = {
        "linux-x86_64": "20.1.1",
        "linux-aarch64": "20.1.1",
    },
    stdlib = {
        "linux-aarch64": "libc++",
        "linux-x86_64": "libc++",
    },
)
llvm.toolchain_root(
    name = "llvm_libcxx",
    label = "@llvm_base_llvm//:BUILD",
)
llvm.sysroot(
    name = "llvm_libcxx",
    label = "@llvm_sysroot_linux_amd64_libcxx//:sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_libcxx",
    label = "@llvm_sysroot_linux_arm64_libcxx//:sysroot",
    targets = ["linux-aarch64"],
)
llvm.extra_target_compatible_with(
    name = "llvm_libcxx",
    constraints = ["@//:libc++"],
)
llvm.toolchain(
    name = "llvm_libstdcxx",
    libclang_rt = {
        "@llvm_sysroot_linux_amd64_libstdcxx//:usr/lib/llvm-20/lib/clang/20/lib/linux/libclang_rt.builtins-x86_64.a": "x86_64-unknown-linux-gnu/libclang_rt.builtins.a",
        "@llvm_sysroot_linux_arm64_libstdcxx//:usr/lib/llvm-20/lib/clang/20/lib/linux/libclang_rt.builtins-aarch64.a": "aarch64-unknown-linux-gnu/libclang_rt.builtins.a",
    },
    llvm_versions = {
        "linux-x86_64": "20.1.1",
        "linux-aarch64": "20.1.1",
    },
    stdlib = {
        "linux-aarch64": "stdc++",
        "linux-x86_64": "stdc++",
    },
)
llvm.toolchain_root(
    name = "llvm_libstdcxx",
    label = "@llvm_base_llvm//:BUILD",
)
llvm.sysroot(
    name = "llvm_libstdcxx",
    label = "@llvm_sysroot_linux_amd64_libstdcxx//:sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_libstdcxx",
    label = "@llvm_sysroot_linux_arm64_libstdcxx//:sysroot",
    targets = ["linux-aarch64"],
)
llvm.extra_target_compatible_with(
    name = "llvm_libstdcxx",
    constraints = ["@//:libstdc++"],
)
use_repo(llvm, "llvm_base_llvm", "llvm_libcxx", "llvm_libstdcxx")

register_toolchains(
    "@llvm_libcxx//:all",
    dev_dependency = True,
)

register_toolchains(
    "@llvm_libstdcxx//:all",
    dev_dependency = True,
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

SYSROOT_DIGESTS = {
    "amd64": {
        "libc++": "de081fcd7809784db207c74346e09d0fc8c5d6f1876a575ddf2f44345912d65c",
        "libstdc++": "f213f7cb59c8afb52d04abe63bd17527cbb886801ad30c7a86e44255268a4d9b",
    },
    "arm64": {
        "libc++": "ffb37b7e4374556787e679b79a3a43987716739c6e0bcde650f00be1a2e90f35",
        "libstdc++": "8ff8b5741afd19d386502578cdd933d238fa54cd0ae5a7939b3b02d0ba3da571",
    },
}

http_archive(
    name = "llvm_sysroot_linux_amd64_libcxx",
    build_file_content = """
filegroup(
  name = "sysroot",
  srcs = glob(["*/**"]),
  visibility = ["//visibility:public"],
)
""",
    sha256 = SYSROOT_DIGESTS["amd64"]["libc++"],
    type = "tzst",
    urls = ["https://ghcr.io/v2/malt3/sysroots/libcxx/blobs/sha256:" + SYSROOT_DIGESTS["amd64"]["libc++"]],
)

http_archive(
    name = "llvm_sysroot_linux_amd64_libstdcxx",
    build_file_content = """
filegroup(
  name = "sysroot",
  srcs = glob(["*/**"]),
  visibility = ["//visibility:public"],
)
""",
    sha256 = SYSROOT_DIGESTS["amd64"]["libstdc++"],
    type = "tzst",
    urls = ["https://ghcr.io/v2/malt3/sysroots/libstdcxx/blobs/sha256:" + SYSROOT_DIGESTS["amd64"]["libstdc++"]],
)

http_archive(
    name = "llvm_sysroot_linux_arm64_libcxx",
    build_file_content = """
filegroup(
  name = "sysroot",
  srcs = glob(["*/**"]),
  visibility = ["//visibility:public"],
)
""",
    sha256 = SYSROOT_DIGESTS["arm64"]["libc++"],
    type = "tzst",
    urls = ["https://ghcr.io/v2/malt3/sysroots/libcxx/blobs/sha256:" + SYSROOT_DIGESTS["arm64"]["libc++"]],
)

http_archive(
    name = "llvm_sysroot_linux_arm64_libstdcxx",
    build_file_content = """
filegroup(
  name = "sysroot",
  srcs = glob(["*/**"]),
  visibility = ["//visibility:public"],
)
""",
    sha256 = SYSROOT_DIGESTS["arm64"]["libstdc++"],
    type = "tzst",
    urls = ["https://ghcr.io/v2/malt3/sysroots/libstdcxx/blobs/sha256:" + SYSROOT_DIGESTS["arm64"]["libstdc++"]],
)
